Testy/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_arg_count3.src
.IPPcode20
MOVE GF@a GF@x GF@ou
